scripts/resources/dashboard.deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dashboard
    cluster: sense.dashboard
  name: dashboard
  namespace: sense
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard
      cluster: sense.dashboard
  template:
    metadata:
      labels:
        app: dashboard
        cluster: sense.dashboard
    spec:
      serviceAccountName: dashboard
      containers:
        - name: sidecar
          image: "docker.production.deciphernow.com/deciphernow/gm-proxy:1.2.2"
          imagePullPolicy: IfNotPresent
          args:
            - -c
            - /etc/greymatter/config.yaml
          command:
            - /app/gm-proxy
          ports:
            - name: metrics
              containerPort: 8080
              protocol: TCP
            - name: sidecar
              containerPort: 8443
              protocol: TCP
          volumeMounts:
            - name: sidecar-config
              mountPath: /etc/greymatter
              readOnly: true
            - name: spire-socket
              mountPath: /run/spire/sockets
              readOnly: false
        - name: dashboard
          image: deciphernow/gm-dashboard:covidapihub
          imagePullPolicy: Always
          ports:
            - name: dashboard
              containerPort: 10080
              protocol: TCP
      imagePullSecrets:
        - name: docker.production.deciphernow.com
        - name: index.docker.io
      volumes:
        - name: sidecar-config
          configMap:
            name: dashboard-sidecar
        - name: spire-socket
          hostPath:
            path: /run/spire/sockets
            type: DirectoryOrCreate
