scripts/resources/edge.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: edge
  namespace: edge
  labels:
    app: edge
    cluster: edge.edge
spec:
  ports:
    - name: sidecar
      port: 8443
      protocol: TCP
      targetPort: sidecar
    - name: login
      port: 9443
      protocol: TCP
      targetPort: login
  selector:
    app: edge
    cluster: edge.edge
  type: LoadBalancer
