scripts/resources/edge.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: edge.simple
  namespace: edge
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: https
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
    - host: development.deciphernow.com
      http:
        paths:
        - path: /login
          backend:
            serviceName: edge
            servicePort: 9443
        - path: /
          backend:
            serviceName: edge
            servicePort: 8443
